subida de archivos

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="fondo-blanco">
             <h2>Formación</h2>
             <div class="p-transition">
-                <p>En 2019 he cursado en <span class="acamica">Acámica</span> la Carrera <a class="carrera" title="Click para ver la Carrera" rel="noopener noreferrer" target="_blank" href="https://www.acamica.com/desarrollo-web-full-stack">Desarrollo Web Full Stack.</a></p>
+                <p>En 2019 he cursado en <span class="acamica">Acámica</span> la Carrera <a class="carrera" title="Click para ver Certificado" rel="noopener noreferrer" target="_blank" href="img/Certificacion.pdf">Desarrollo Web Full Stack.</a></p>
                 <p>En 2020 continuaré con <a title="Click para ver la Carrera" class="carrera" rel="noopener noreferrer" target="_blank" href="https://www.acamica.com/front-end-avanzado-react">Front-end Avanzado en React.</a></p>
             </div>
             <ul class="lista-datos-personales">
