--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
             <h2>Formación</h2>
             <div class="p-transition">
                 <p>En 2019 he cursado en <span class="acamica">Acámica</span> la Carrera <a class="carrera" title="Click para ver Certificado" rel="noopener noreferrer" target="_blank" href="img/Certificacion.pdf">Desarrollo Web Full Stack.</a></p>
-                <p>En 2020 continuaré con <a title="Click para ver la Carrera" class="carrera" rel="noopener noreferrer" target="_blank" href="https://www.acamica.com/front-end-avanzado-react">Front-end Avanzado en React.</a></p>
-            </div>
+                
             <ul class="lista-datos-personales">
                 <li><span class="def">Estudios Terciarios:</span><span class="dato">Analista de Sistemas</span></li>
                 <li><span class="def">Instituto:</span><span class="dato">ISIV - Gdor. Virasoro - Corrientes - Argentina</span></li>
@@ -75,13 +74,14 @@
         <div class="fondo-blanco">
             <h2>Información Laboral</h2>
             <div class="p-transition">
-                <p>Trabajo con pasión en la Empresa <span id="oca">OCA SRL</span>. He ocupado diferentes puestos, desde Distribuidor Domiciliario en un principio, para pasar luego por Áreas Administrativas y Operativas, ocupando puestos de mucha responsabilidad,
-                    hasta ser desde el año 2004 a la actualidad el Responsable de Cobranzas en Sucursal, tarea que desempeño con profesionalidad, brindando además apoyo a las Áreas Comercial y Operativa. </p>
+                <p>Trabajo con pasión en la Sucursal Bahìa Blanca de la Empresa <span id="oca">OCA SRL</span>. He ocupado diferentes puestos, siendo Distribuidor Domiciliario en un principio, pasando luego por Áreas Operativas y Administrativas, en las que ocupé puestos de mucha responsabilidad. Desde Agosto del 2004 hasta Agosto del 2020  
+                 desempeñé las tareas de Responsable de Cobranzas en Sucursal y desde Septiembre del 2020 soy Representante Comercial, además de brindar Atención Y Soporte al Cliente Corporativo.</p>
+                <p>En estos 32 años de servicio, mi esfuerzo y constancia me permitieron ir capacitándome para asumir tareas de mayor responsabilidad, como las que desarrollo en la actualidad. </p>
             </div>
             <ul class="lista-datos-personales">
                 <li><span class="def">Empresa:</span><span class="dato">OCA SRL</span></li>
                 <li><span class="def">Rubro:</span><span class="dato">Empresa de Correo Privado y Servicios Logísticos</span></li>
-                <li><span class="def">Categoría:</span><span class="dato">Operador de Servicios</span></li>
+                <li><span class="def">Categoría:</span><span class="dato">Representante Comercial</span></li>
                 <li><span class="def">Antiguedad:</span><span class="dato">01 Abril 1989 a la actualidad </span></li>
             </ul>
 
