--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h2>Información Laboral</h2>
             <div class="p-transition">
                 <p>Trabajo con pasión en la Sucursal Bahìa Blanca de la Empresa <span id="oca">OCA SRL</span>. He ocupado diferentes puestos, siendo Distribuidor Domiciliario en un principio, pasando luego por Áreas Operativas y Administrativas, en las que ocupé puestos de mucha responsabilidad. Desde Agosto del 2004 hasta Agosto del 2020  
-                 desempeñé las tareas de Responsable de Cobranzas en Sucursal y desde Septiembre del 2020 soy Representante Comercial, además de brindar Atención Y Soporte al Cliente Corporativo.</p>
+                 desempeñé las tareas de Responsable de Cobranzas en Sucursal y desde Septiembre del 2020 soy Representante Comercial, además de brindar Atención y Soporte al Cliente Corporativo.</p>
                 <p>En estos 32 años de servicio, mi esfuerzo y constancia me permitieron ir capacitándome para asumir tareas de mayor responsabilidad, como las que desarrollo en la actualidad. </p>
             </div>
             <ul class="lista-datos-personales">
