--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h2>Formación</h2>
             <div class="p-transition">
                 <p>En 2019 he cursado en <span class="acamica">Acámica</span> la Carrera <a class="carrera" title="Click para ver Certificado" rel="noopener noreferrer" target="_blank" href="img/Certificacion.pdf">Desarrollo Web Full Stack.</a></p>
-                
+            </div>    
             <ul class="lista-datos-personales">
                 <li><span class="def">Estudios Terciarios:</span><span class="dato">Analista de Sistemas</span></li>
                 <li><span class="def">Instituto:</span><span class="dato">ISIV - Gdor. Virasoro - Corrientes - Argentina</span></li>
