--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <ul class="lista-datos-personales">
                 <li><span class="def">Direccion:</span><span class="dato">Mazzarello 524 - Bahía Blanca - Bs. As. - Argentina</span></li>
                 <li><span class="def">Nacimiento:</span><span class="dato">21 Mar 1968</span></li>
-                <li><span class="def">Móvil:</span><span class="dato">+54 (291) 570-5083</span></li>
+                <li><span class="def">Móvil:</span><span class="dato">+54 9 291 5705083</span></li>
                 <li><span class="def">Mail:</span><span class="dato">hfajulian@gmail.com</span></li>
                 <li><span class="def">Linkedin:</span><a id="linkedin" rel="noopener noreferrer" target="_blank" href="https://www.linkedin.com/in/h-fabián-julián-b8886a153"><span class="dato">https://www.linkedin.com/in/h-fabián-julián-b8886a153</span></a></li>
                 <li><span class="def">Github:</span><a id="linkedin" rel="noopener noreferrer" target="_blank" href="https://github.com/Fabian1968?tab=repositories"><span class="dato">https://github.com/Fabian1968?tab=repositories</span></a></li>
